<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0"
    tools:context="com.example.krzysiek.calculator.rozszerzonyCalcActivity">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >



        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="12dp"
            />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:enabled="false"
            android:gravity="bottom"
            android:layout_marginTop="20dp"
            />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText2"
            android:layout_alignStart="@+id/editText2"
            android:layout_centerVertical="true"
            android:text="@string/_7" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button7"
            android:layout_alignBottom="@+id/button7"
            android:layout_toEndOf="@+id/button7"
            android:layout_toRightOf="@+id/button7"
            android:text="@string/_8" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button8"
            android:layout_alignBottom="@+id/button8"
            android:layout_toEndOf="@+id/button8"
            android:layout_toRightOf="@+id/button8"
            android:text="@string/_9" />

        <Button
            android:id="@+id/buttonMnozenie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button9"
            android:layout_alignBottom="@+id/button9"
            android:layout_toEndOf="@+id/button9"
            android:layout_toRightOf="@+id/button9"
            android:text="@string/x" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button7"
            android:layout_alignStart="@+id/button7"
            android:layout_below="@+id/button7"
            android:layout_marginTop="15dp"
            android:text="@string/_4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button4"
            android:layout_toEndOf="@+id/button4"
            android:layout_toRightOf="@+id/button4"
            android:text="@string/_5" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button5"
            android:layout_alignBottom="@+id/button5"
            android:layout_toEndOf="@+id/button5"
            android:layout_toRightOf="@+id/button5"
            android:text="@string/_6" />

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button6"
            android:layout_alignBottom="@+id/button6"
            android:layout_toEndOf="@+id/button6"
            android:layout_toRightOf="@+id/button6"
            android:text="@string/minus" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button4"
            android:layout_alignStart="@+id/button4"
            android:layout_below="@+id/button4"
            android:layout_marginTop="12dp"
            android:text="@string/_1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button1"
            android:layout_toEndOf="@+id/button1"
            android:layout_toRightOf="@+id/button1"
            android:text="@string/_2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button2"
            android:layout_toLeftOf="@+id/buttonMinus"
            android:layout_toStartOf="@+id/buttonMinus"
            android:text="@string/_3" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/button3"
            android:layout_toEndOf="@+id/button3"
            android:layout_toRightOf="@+id/button3"
            android:text="@string/plus" />

        <Button
            android:id="@+id/buttonDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button1"
            android:layout_marginTop="11dp"
            android:layout_toLeftOf="@+id/button2"
            android:layout_toStartOf="@+id/button2"
            android:text="@string/dot" />

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/buttonDot"
            android:layout_toEndOf="@+id/buttonDot"
            android:layout_toRightOf="@+id/buttonDot"
            android:text="@string/_0" />

        <Button
            android:id="@+id/buttonRowne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button0"
            android:layout_toEndOf="@+id/button0"
            android:layout_toRightOf="@+id/button0"
            android:text="@string/rowne" />

        <Button
            android:id="@+id/buttonDzielenie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/buttonRowne"
            android:layout_toEndOf="@+id/buttonRowne"
            android:layout_toRightOf="@+id/buttonRowne"
            android:text="@string/dzielenie" />

        <Button
            android:id="@+id/buttonC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonMnozenie"
            android:layout_marginBottom="11dp"
            android:layout_toEndOf="@+id/button9"
            android:layout_toRightOf="@+id/button9"
            android:text="@string/clear" />

        <Button
            android:id="@+id/buttonPow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/buttonC"
            android:layout_toLeftOf="@+id/buttonC"
            android:layout_toStartOf="@+id/buttonC"
            android:text="^" />

        <Button
            android:id="@+id/buttonSqrt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/buttonPow"
            android:layout_toLeftOf="@+id/buttonPow"
            android:layout_toStartOf="@+id/buttonPow"
            android:text="SQRT" />

        <Button
            android:id="@+id/buttonSilnia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/buttonSqrt"
            android:layout_toLeftOf="@+id/buttonSqrt"
            android:layout_toStartOf="@+id/buttonSqrt"
            android:text="N!" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>

